--- a/readme.text
+++ b/readme.text
@@ -1,1 +1,60 @@
-hello
+# C'est quoi un CMS.
+ c’est un logiciel destiné à concevoir et à mettre à jour de manière dynamique des sites Web ou des applications multimédias.
+ Pour pouvoir être définis comme CMS, les logiciels doivent pouvoir :
+
+##être utilisés simultanément par plusieurs individus 
+##proposer une chaîne de publication de contenu
+##permettre de gérer séparément la forme et le contenu 
+
+# étude de benchmarking des CMS .
+
+1. Présentation du CMS WordPress
+ 	- Les avantages du CMS Wordpress :
+ 		- Avec WordPress, il est facile de créer des sites vitrines ou e-commerce en ajoutant des plugins supplémentaires.
+		- Le back-office est relativement simple à prendre en main ce qui le rend accessible à tous : c’est probablement le CMS le plus connu de tous.
+		- Il existe de nombreux thèmes (templates) WordPress disponibles gratuitement en téléchargement sur le web ou payants.
+		- l est possible de venir implémenter de nouvelles fonctionnalités sur WordPress avec les nombreux modules et plugins qui sont publiés tous les jours par la communauté de développeurs WordPress.
+	- Les inconvénients du CMS WordPress :
+		- Qui dit CMS connu et reconnu… dit sujet aux attaques et tentatives de piratage. Bien souvent, ce sont les plugins ou thèmes non mis à jour qui infesteront votre site web. Il faut donc veiller à les mettre à jour et prévoir des sauvegardes de votre base de données.
+		- Pour la mise en ligne du site (choix d’un hébergement, achat de nom de domaine), il faudra prévoir un accompagnement pour les débutants.
+		- Les sites Wordpress ne sont pas réputés pour leur vitesse : cela fait souvent défaut sur ce CMS surtout dans le cas de sites qui utilisent des Builders (Divi par exemple).
+
+2. Présentation du CMS Joomla
+	- Les avantages du CMS Joomla :
+ 		- Joomla est un CMS pluriel : accessible aux débutants mais aussi tout à fait puissant et intéressant lorsque l’on maîtrise son langage pour construire un site sur-mesure.
+		- L’interface et la prise en main des utilisateurs est facile pour créer, modifier et supprimer des pages.
+		- La gestion des utilisateurs est très avancée pour contrôler l’accès au back-office et donner des autorisations aux membres de l’équipe.
+		- Vous pouvez créer un site multilingue très facilement sans avoir recours à un module complémentaire.
+	- Les inconvénients du CMS Joomla :
+		- Joomla étant un CMS moins utilisé en général, il existe une plus petite communauté pour proposer des thèmes ou des extensions par rapport à un CMS comme Wordpress.
+		- Il sera plus difficile de créer un site plus complexe avec Joomla : risques de lenteurs.
+
+3. Présentation du CMS Drupal
+	- Les avantages du CMS Joomla :
+ 		- Drupal est un outil puissant pour tous les besoins de création de sites web.
+		- Ce CMS est aussi très modulaire : de nombreux thèmes et plugins permettent de faire évoluer un projet de site web.
+		- Drupal est aussi sécurisé car de nombreuses mises à jour sont proposées.
+		- Il est possible d’obtenir de l’aide de la part de la communauté Drupal en cas de question.
+	- Les inconvénients du CMS Joomla :
+		- Drupal reste un CMS qui s’adresse plutôt à des développeurs en tous cas pour l’installer et modifier l’apparence du site.
+		- D’ailleurs, la plupart des sites qui fonctionnent sur Drupal utilise des thèmes qui sont assez chers à l’achat.
+		- Si vous avez besoin d’un CMS pour un blog, Drupal n’est sûrement pas adapté : sa lourdeur sera un frein pour le développement de votre site.
+
+
+# C'est quoi un Wordpress.
+   - WordPress est un système de gestion de contenu (SGC ou content management system (CMS) en anglais) gratuit, libre et open-source. Ce logiciel écrit 
+   en PHP repose sur une base de données MySQL et est distribué par la fondation WordPress.org. Les fonctionnalités de WordPress lui permettent de créer 
+   et gérer différents types de sites Web : site vitrine, site de vente en ligne, site applicatif, blog, portfolio, site institutionnel,
+    site d'enseignement…
+
+
+
+
+
+
+
+
+
+
+
+
